<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiary">

    <ImageView
        android:id="@+id/moon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/switchButtonChangeColorTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_nights_stay_24"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_wb_sunny_24_50"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchButtonChangeColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toEndOf="@+id/sun"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/imie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"

        android:fontFamily="@font/quicksand_regular"

        android:gravity="top"
        android:text="@string/imie"
        android:textAppearance="@style/rejestracja"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/button_wygenerowanie_kodu"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:drawableLeft="@drawable/key_24_50"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="left|center_vertical"
        android:text="@string/Wygenerowanie_kodu"
        android:textAllCaps="false"

        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="12dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imie"
        app:layout_constraintVertical_bias="0.051"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button_zmiana_danych"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:drawableLeft="@drawable/manage_accounts_24_50"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="left|center_vertical"
        android:text="@string/Zmiana_danych"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="12dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_wygenerowanie_kodu"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button_zarzadyanie_uyztkownikamu"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:drawableLeft="@drawable/settings_suggest_24_50"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="left|center_vertical"
        android:text="@string/Zarządzanie_użytkownikami"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="12dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_zmiana_danych"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />



    <Button
        android:id="@+id/button_about_us"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:drawableLeft="@drawable/outline_contact_page_24_50"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="left|center_vertical"
        android:text="@string/About_us"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="12dp"


        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_zarzadyanie_uyztkownikamu"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button_help"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:drawableLeft="@drawable/question_mark_24_50"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="left|center_vertical"
        android:text="@string/Pomoc"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="12dp"


        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_about_us"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button_wyloguj"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:drawableLeft="@drawable/exit_to_app_24_50"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="left|center_vertical"
        android:text="@string/Wyłoguj"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="12dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_help"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
