...
        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"

        android:iconTint="?attr/colorSecondaryVariant"
        />
    <item
        android:id = "@+id/settings"
        android:title="@string/ustawienia"
        android:icon="@drawable/selector_settings"

        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"

...
