...

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/wprowadz_kod2"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:hint="@string/wprowadz_kod"
        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"
        app:boxStrokeColor="?attr/colorTertiary"

        app:hintTextColor="?attr/colorSecondaryVariant"
...

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_zatwierdz"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
...
